@@ -99,9 +99,10 @@ export(
        read.adp.rdi,
        read.adp.nortek,
        read.adp.sontek,
+       read.adp.sontek.serial,
        read.adv,
        read.adv.nortek,
-       read.adv.sontek.realtime,
+       read.adv.sontek.serial,
        read.adv.sontek.adr,
        read.adv.sontek.text,
        read.cm,
