@@ -2,6 +2,7 @@
 \alias{read.adp}
 \alias{read.adp.nortek}
 \alias{read.adp.sontek}
+\alias{read.adp.sontek.serial}
 \alias{read.adp.rdi}
 
 \title{Read an ADP data file}
@@ -29,11 +30,16 @@ read.adp.sontek(file, from=1, to, by=1, tz=getOption("oce.tz"),
   type=c("adp"),
   debug=getOption("oce.debug"), monitor=TRUE, despike=FALSE, log.action,
   \dots)
+read.adp.sontek.serial(file, from=1, to, by=1,
+                      latitude=NA, longitude=NA,
+                      monitor=TRUE, log.action,
+                      debug=getOption("oce.debug")) 
 }
 
 \arguments{
   \item{file}{a connection or a character string giving the name of the
-    file to load.}
+    file to load.  (For \code{read.adp.sontek.serial}, this is
+    generally a list of files, which will be concatenated.}
   \item{from}{indication of the first profile to read.  This can be an
     integer, the sequence number of the first profile to read, or a
     POSIXt time before which profiles should be skipped, or a character
